added some code

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NR Bus Ticket</title>
+  <title>NR Travels</title>
   <!-- Tailwind and Daisy UI -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -40,18 +40,45 @@
       <button>About</button>
       <button>Destination</button>
       <button>Search</button>
-      </div>
-      <div>
-        <Button class="flex justify-center mt-4 text-xl font-inter gap-9 border  items-center text-green-500 space-between">Bus<i class="fa-solid fa-van-shuttle"></i></Button>
-      </div>
+    </div>
+    <div>
+      <Button
+        class="flex justify-center mt-4 text-xl font-inter gap-9 border  items-center text-green-500 space-between">Bus<i
+          class="fa-solid fa-van-shuttle"></i></Button>
+    </div>
   </div>
-  
+
   <!-- Main Content -->
   <div class="">
     <img class="bus-banner" src="images/banner.png" alt="">
   </div>
-  <!-- footer -->
+  <div class="image-infront">
+    <h1>End-to-End Travel with</h1>
+    <br>
+    <p>NR Travels</p>
+    <br>
+    <p>If you need to travel morning, noon, or night, Peter Pan Bus Lines has a variety of bus times to serve your
+      Rajshahi
+      to Rangpur, NR travel schedule.
 
+      And if Rangpur is just your starting place for your next destination, we have convenient bus routes running to
+      most
+      cities in Rangpur and the Dhaka such as Rangpur to Dhaka and others</p>
+    <button class="bg-green-500 text-white py-2 px-2 border-radius">Buy Tickets</button>
+  </div>
+  <div class="">
+    <button class="offers-button">See All Offers</button>
+  </div>
+  <div class="text-center">
+    <h1 class="text-2xl font-semibold">NR Travels</h1>
+    <p>Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow
+      for a
+      streamlined .</p>
+  </div>
+  <!-- footer -->
+  <footer>
+    
+  </footer>
   <!-- JS Link -->
   <script src="script/script.js"></script>
 </body>
